# mcp-server-calculator

./: LICENSE  README.md  calculator.py  mcp.json  pyproject.toml  requirements.txt
